# kube-bullet

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
containers/devcontainer_without_vscode/: exec.sh  run_cpu.sh  run_nvidia.sh
examples/: example_control_object.py  example_pick_and_place.py  example_simulation_loop_control.py  example_trajectory_control.py
kube_bullet/: example_control_object.py  example_pick_and_place.py  example_trajectory_control.py  kube_bullet_simulator.py  run_simulation.py  test_kube_bullet_grpc_client.py
kube_bullet/assets/bullet/table/: table.urdf  table_box.urdf
kube_bullet/grpc_kube_bullet/: generate_python_code_bullet.sh  kube_bullet_grpc_pb2.py  kube_bullet_grpc_pb2_grpc.py  kube_bullet_grpc_server.py
kube_bullet/grpc_kube_bullet/protos/: kube_bullet_grpc.proto
kube_bullet/objects/: object_base.py  object_from_urdf.py  object_manager.py
kube_bullet/objects/object_assets/cube/: cube.bullet.config.yaml  fixture.urdf  object.urdf  pick_config.json  pose-target_config.json  shadow-target_config.json  shadow.urdf
kube_bullet/rendering/: renderer_base.py
kube_bullet/robots/: robot_base.py  robot_spawner.py  robotiq_gripper.py  ur_robot.py
kube_bullet/robots/robot_assets/ur10e_cell/: ur10e_cell.bullet.config.yaml  ur10e_cell.urdf  ur10e_only.urdf
kube_bullet/utils/: pose_marker.py  tf_utils.py
kube_bullet/worlds/: bullet_world.py
