[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kube_bullet"
version = "0.1.0"
authors = [
  { name="Yongzhou Zhang", email="yongzhou.zhang.d@gmail.com" },
]
description = " A Pybullet-based robotics simulation using gRPC for client-server communication. "
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

keywords = ['robotics', 'simulation']

dependencies = [
    'grpcio >= 1.60.0',
    'grpcio-tools >= 1.60.0',
    'numpy >= 1.24.4',
    'protobuf >= 4.25.1',
    'pybullet >= 3.2.6',
    'loguru >= 0.7.2',
    'PyYAML >= 6.0.1',
]

[tool.setuptools]
packages = ["kube_bullet"]

[project.scripts]
run_simulation = "kube_bullet.run_simulation:main"

[project.urls]
"Homepage" = "https://github.com/kuberos-io/kube-bullet"
